--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,8 @@
         <LinearLayout
             android:id="@+id/mark"
             android:layout_width="match_parent"
-            android:layout_height="390dp"
-            android:background="@drawable/board"
+            android:layout_height="290dp"
+            android:background="@drawable/sampul"
             android:orientation="vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -26,8 +26,8 @@
                 android:layout_width="99dp"
                 android:layout_height="106dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="200dp"
-                android:src="@drawable/rey" />
+                android:layout_marginTop="100dp"
+                android:src="@drawable/fiture" />
 
             <LinearLayout
                 android:id="@+id/nama"
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
-                android:text="REYNALDO FERDIAN SAPUTRA"
+                android:text="Hemanolisa Monika Putri"
                 android:textColor="#030303"
                 android:textSize="21dp"
                 android:textStyle="bold" />
@@ -72,60 +72,60 @@
         </LinearLayout>
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/f"
+            android:id="@+id/ig"
             android:layout_width="144dp"
             android:layout_height="135dp"
             android:layout_gravity="right"
-            android:layout_marginTop="400dp"
-            android:src="@drawable/f" />
+            android:layout_marginTop="300dp"
+            android:src="@drawable/instagram" />
 
         <TextView
-            android:id="@+id/k_f"
+            android:id="@+id/k_ig"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="30dp"
-            android:text="5K"
+            android:text="2K"
             android:textStyle="bold"
-            android:layout_marginStart="59dp"
+            android:layout_marginStart="50dp"
             android:gravity="left"
-            android:layout_marginTop="510dp"/>
+            android:layout_marginTop="418dp"/>
 
         <TextView
-            android:id="@+id/fol_f"
+            android:id="@+id/fol_ig"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="followers"
-            android:layout_marginStart="49dp"
+            android:layout_marginStart="40dp"
             android:gravity="left"
-            android:layout_marginTop="550dp"
+            android:layout_marginTop="458dp"
             />
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/i"
-            android:layout_width="2000dp"
-            android:layout_height="121dp"
+            android:id="@+id/fb"
+            android:layout_width="420dp"
+            android:layout_height="135dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="400dp"
+            android:layout_marginTop="300dp"
             android:layout_marginEnd="5dp"
-            android:src="@drawable/i" />
+            android:src="@drawable/facebook" />
 
         <TextView
-            android:id="@+id/k_i"
+            android:id="@+id/k_fb"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="30dp"
-            android:text="45rb"
+            android:text="1k"
             android:textStyle="bold"
-            android:layout_marginStart="180dp"
+            android:layout_marginStart="200dp"
             android:gravity="left"
-            android:layout_marginTop="510dp"/>
+            android:layout_marginTop="418dp"/>
 
         <TextView
-            android:id="@+id/fol_i"
+            android:id="@+id/fol_fb"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="392dp"
+        android:layout_marginStart="185dp"
+        android:layout_marginTop="210dp"
         android:gravity="fill"
         android:text="followers" />
 
@@ -134,26 +134,26 @@
             android:layout_width="228dp"
             android:layout_height="136dp"
             android:layout_marginStart="279dp"
-            android:layout_marginTop="400dp"
-            android:src="@drawable/t" />
+            android:layout_marginTop="300dp"
+            android:src="@drawable/twitter" />
 
         <TextView
             android:id="@+id/k_tw"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="30dp"
-            android:text="5rb"
+            android:text="25rb"
             android:textStyle="bold"
-            android:layout_marginStart="319dp"
+            android:layout_marginStart="312dp"
             android:gravity="left"
-            android:layout_marginTop="510dp"/>
+            android:layout_marginTop="419dp"/>
 
         <TextView
             android:id="@+id/fol_tw"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="315dp"
-            android:layout_marginTop="392dp"
+            android:layout_marginTop="210dp"
             android:gravity="fill"
             android:text="followers" />
 
